# super-secret-santa

./: .gitignore  Dockerfile  LICENSE  README.md  config.ini.example  pyproject.toml  schema.sql
.github/workflows/: docker-image.yml
super_secret_santa/: __init__.py  __main__.py  bot.py  commands.py  constants.py  database.py  event_listeners.py  pdf.py  secret_santa.py  views.py
